# StoriesFromAParallelUniverse-

./: CMakeLists.txt  naive_parallelism.h  stories_from_a_paralel_universe.pptx  two_worlds.cpp
